err/vcsdeploy.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py'...
Listing './lib/python3.5/site-packages/py/_code'...
Listing './lib/python3.5/site-packages/py/_io'...
Listing './lib/python3.5/site-packages/py/_log'...
Listing './lib/python3.5/site-packages/py/_path'...
Listing './lib/python3.5/site-packages/py/_process'...
Listing './lib/python3.5/site-packages/py/_vendored_packages'...
Listing './lib/python3.5/site-packages/py-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/vcsdeploy'...
Compiling './lib/python3.5/site-packages/vcsdeploy/MainWindow.py'...
***   File "./lib/python3.5/site-packages/vcsdeploy/MainWindow.py", line 62
    except UnknownRevisionError, e:
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vcsdeploy/autopath.py'...
***   File "./lib/python3.5/site-packages/vcsdeploy/autopath.py", line 7
    print 'Inserting %s in sys.path' % parentdir
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/vcsdeploy/cmdline.py'...
***   File "./lib/python3.5/site-packages/vcsdeploy/cmdline.py", line 20
    print 'Usage: %s configfile [options]' % sys.argv[0]
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/vcsdeploy/hg.py'...
***   File "./lib/python3.5/site-packages/vcsdeploy/hg.py", line 71
    except (error.RepoLookupError, error.ParseError), e:
                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vcsdeploy/makefile.py'...
***   File "./lib/python3.5/site-packages/vcsdeploy/makefile.py", line 14
    print ui
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/vcsdeploy-0.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
